Avoid flickering at top of list
Adjust `#page-1` positioning so it sits in the parent’s top padding,
preventing jump flicker when scrolling to it from the top of the
list.

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -321,3 +321,9 @@ form[name="form_confirm_removal"] {
   background: @control-hover-bg;
   text-decoration: none;
 }
+
+#page-1 {
+  display: block;
+  width: 1px;
+  margin: -1em 0 1em -1em;
+}
